--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
 	<center>
 			<h1> Game </h1>
 
-			<div class="Login_div1 col-lg-4 col-sm-8 col-xs-11">
+			<div class="Login_div1 col-lg-4 col-sm-8 col-xs-11 login_div1">
 				<h3> Player 1 login for the game </h3>
 				<label> User Name : </label>
 				<input type="text" class="form-control" id = "player1_name" placeholder="Player 1 Name">
+				<br>
 			</div>
 			<br>
-			<div class="Login_div2 col-lg-4 col-sm-8 col-xs-11">
+			<div class="Login_div2 col-lg-4 col-sm-8 col-xs-11 login_div2">
 				<h3> Player 2 login for the game</h3>
 				<label> User Name : </label>
 				<input type="text" class="form-control" id="player2_name" placeholder="Player 2 Name">
+				<br>
 			</div>
 			 <br>
 			<button style="width: 30%;" class="btn btn-success btn-lg" onclick="addUser()"> Log In</button>
