--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<br>
 			</div>
 			 <br>
-			<button style="width: 30%;" class="btn btn-success btn-lg" onclick="addUser()"> Log In</button>
+			<button style="width: 30%;" class="btn btn-info btn-lg" onclick="addUser()"> Log In</button>
 		</center>	
 </body>
 </html>
